# mirofish

./: .containerignore  .env.example  .env.local.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Containerfile  LOCAL-STARTUP.md  README-EN.md  demo.py  docker-compose.local.yml  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker-image.yml
backend/: pyproject.toml  requirements-graphiti.txt  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: graph_builder.py  graphiti_patch.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_adapter.py  zep_cloud_impl.py  zep_entity_reader.py  zep_factory.py  zep_graph_memory_updater.py  zep_graphiti_impl.py  zep_tools.py
backend/app/utils/: file_parser.py  llm_client.py  logger.py  retry.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
docs/: zep-localization-evaluation.md  zep-localization-plan.md
docs/issues/: simulation-error-not-displayed.md
docs/zep-localization/: CHANGELOG.md  README.md  TODO.md  architecture.md  migration-guide.md  troubleshooting.md
examples/: seed_news.txt
frontend/src/api/: simulation.js
frontend/src/components/: GraphPanel.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  (+1 more)
(+8 files in other folders)
