[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish - Concise general-purpose swarm intelligence engine, predicting everything"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM-related
    "openai>=1.0.0",

    # Zep Cloud (default backend)
    "zep-cloud==3.13.0",

    # File processing
    "PyMuPDF>=1.24.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Graphiti local backend (alternative to Zep Cloud)
# Install: uv sync --extra graphiti
# Enable: ZEP_BACKEND=graphiti
# Note: conflicts with oasis dependency (incompatible neo4j versions)
graphiti = [
    "graphiti-core>=0.25.0,<0.26.0",
    # graphiti-core requires neo4j>=5.26.0
]

# OASIS social media simulation
# Install: uv sync --extra oasis
# Note: conflicts with graphiti dependency (incompatible neo4j versions)
oasis = [
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    # camel-oasis requires neo4j==5.23.0
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "graphiti" },
        { extra = "oasis" },
    ],
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
